<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SuperSmart</string>

    <string name="help">help</string>
    <string name="toggle">toggle</string>
    <string name="show_prior">上一页</string>
    <string name="show_next">下一页</string>
    <string name="show_first">第一页</string>
    <string name="show_current">当前页</string>
    <string name="go_to">跳转至...</string>
    <string name="ip_address">IP地址：</string>
    <string name="port">端口号：</string>
    <string name="invalid_address">IP地址或端口号错误</string>
    <string name="connect_failed">服务器连接失败，请稍后重试</string>
    <string name="operate_failed">操作失败</string>
    <string name="fragment_error">模块初始化连接异常</string>
    <string name="tips">提示</string>
    <string name="sure_power_off">确认关闭计算机？</string>
    <string name="sure">确认</string>
    <string name="cancel">取消</string>
    <string name="invalid_number">数字不合法</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="version">V_0.1</string>
    <string name="copyright">Copyright 2015-2020 SamZhan\nAll Rights Reserved</string>
    <string name="action_settings">setting</string>
    <string name="action_example">example</string>
    <string name="remove_account_confirm">确认删除该IP地址？</string>
    <string name="addressdata">address_data</string>
    <string name="login">登陆</string>
    <string name="port_invalid">端口号有误</string>
    <string name="ip_invalid">IP地址有误</string>
    <string name="output_stream_failed">输出流异常</string>
    <string name="ppt_exit">退出</string>
    <string name="sure_power_reboot">确认重启计算机吗？</string>
</resources>
